Modify Arcadia grant text

--- a/templates/api_key_registration.html
+++ b/templates/api_key_registration.html
@@ -32,7 +32,7 @@
         <p class="sig">
             OpenAlex is made with ❤︎ by <a href="https://ourresearch.org/">OurResearch</a>,<br>
             with generous support from<br>
-            <a href="https://www.arcadiafund.org.uk/">Arcadia — a charitable fund of Lisbet Rausing and Peter Baldwin.</a>
+            <a href="https://www.arcadiafund.org.uk/">Arcadia</a>
         </p>
     </body>
 </html>
